--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "dotenv": "^17.2.1",
     "ejs": "^3.1.6",
-    "express": "^4.17.1",
-    "body-parser": "^1.19.0"
+    "express": "^4.17.1"
   }
 }
